fix(tooltip): render tooltip on portal to avoid hidden overflows
The current tooltip was rendered inside the chart container. If the chart is rendered inside a DOM
element with an hidden overflow, then the tooltip will be cutted. I moved the tooltip element to
render on the document body through a React portal.

close #375

--- a/src/components/_tooltip.scss
+++ b/src/components/_tooltip.scss
@@ -1,3 +1,9 @@
+.echTooltipContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
 .echTooltip {
   @include euiToolTipStyle;
   @include euiFontSizeXS;
